<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="be.howest.nmct.BitcoinRateFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/TxtBitcoinLabel"
        android:id="@+id/TxtBitCoinLabel"
        android:textSize="32dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="32dp"
        android:id="@+id/TxtBitcoinKoersIngave"
        android:layout_gravity="left|top"
        android:text="@string/TxtBitcoinKoersIngave"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/EuroTeken"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/TxtBitcoinKoersIngave"
        android:layout_marginTop="41dp"
        android:textSize="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWijzigen"
        android:id="@+id/btnWijzigen"
        android:layout_below="@+id/TxtBitcoinKoersIngave"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="16dp"/>

</RelativeLayout>
